--- a/purchase_indonesia/views/management_good_request.xml
+++ b/purchase_indonesia/views/management_good_request.xml
@@ -45,7 +45,9 @@
                                     <field name="date_schedule" string="Date"
                                            attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}" required="True"/>
                                      <field name="company_id" string="Company" options="{'no_create_edit': True}"/>
-                                     <field name="location_id" string="Source Location" options="{'no_create_edit': True}"/>
+                                     <field name="picking_type_id" string="Picking" options="{'no_create_edit': True}"/>
+                                     <field name="location_id" string="Source Location" invisible="1" options="{'no_create_edit': True}"/>
+                                     <field name="warehouse_id" string="Warehouse" options="{'no_create_edit': True}"/>
                                      <field name="destination_id" string="Destination Location" options="{'no_create_edit': True}"/>
                                 </group>
                                 <group>
